[project]
name = "comfyui-easy-padding"
description = "ComfyUI Easy Padding is a simple custom ComfyUI node that helps you to add padding to images on ComfyUI."
version = "1.0.0"
license = { file = "LICENCE" }
dependencies = ["numpy"]

[project.urls]
Repository = "https://github.com/ealkanat/comfyui-easy-padding"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "erkana"
DisplayName = "ComfyUI Easy Padding"
Icon = ""
